# tarp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Language.hpp  MakefileCreator.cpp  MakefileCreator.hpp  ProjectDirCreator.cpp  ProjectDirCreator.hpp  README.md
doc/html/: _c_generator_8hpp.html  _c_generator_8hpp_source.html  _c_make_generator_8hpp.html  _c_make_generator_8hpp_source.html  _code_generator_8hpp.html  _code_generator_8hpp_source.html  _cpp_generator_8hpp.html  _cpp_generator_8hpp_source.html  _cpp_project_dir_creator_8hpp.html  _cpp_project_dir_creator_8hpp_source.html  _git_init_8hpp_source.html  _language_8hpp_source.html  _makefile_generator_8hpp.html  _makefile_generator_8hpp_source.html  _project_dir_creator_8hpp.html  _project_dir_creator_8hpp_source.html  _project_generator_8hpp.html  _project_generator_8hpp_source.html  _unix_makefile_generator_8hpp.html  _unix_makefile_generator_8hpp_source.html  annotated.html  class_c_generator-members.html  class_c_generator.html  class_c_make_generator-members.html  class_c_make_generator.html  class_cleaner-members.html  class_cleaner.html  class_code_generator-members.html  class_code_generator.html  class_cpp_generator-members.html  class_cpp_generator.html  class_git_initializer-members.html  class_git_initializer.html  class_makefile_generator-members.html  class_makefile_generator.html  class_project_generator-members.html  class_project_generator.html  class_unix_makefile_generator-members.html  class_unix_makefile_generator.html  classes.html  (+33 more)
include/: CodeGenerator.hpp  GitInit.hpp  MakefileCreator.hpp  ProjectDirCreator.hpp  ProjectGenerator.hpp
include/CodeGenerator/: CGenerator.hpp  CodeGenerator.hpp  (+1 more)
src/: CodeGenerator.cpp  GitInit.cpp  MakefileCreator.cpp  ProjectDirCreator.cpp  ProjectGenerator.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
(+45 files in other folders)
